plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.1.3'
}

allprojects {

    group 'ru.ioque'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }
        maven { url 'https://repo.spring.io/snapshot' }
    }

    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'
    apply plugin: 'application'

    mainClassName = 'ru.ioque.investfund.Application'

}

subprojects {
    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        testLogging {
            events "passed"
        }
    }
}
